# brainstorm

./: .gitignore  Cargo.toml  Makefile  README.md  dev.sh  output.txt  run.sh  todo.txt
scripts/: check_line_length.py
src/: ast.rs  constants.rs  eval.rs  lib.rs  main.rs  parser.lalrpop  test.txt  value.rs
src/lib/: README.md  layer.rs  network.rs  neuron.rs
test-lib/: test2.txt
tests/: libtest.rs  test.rs
tests/common/: env_import_file.txt  mod.rs
tests/test_output/: test_assignment.output  test_elif.output  test_if_else.output  test_list_comprehension.output  test_list_indexing.output  test_object_super.output  test_object_visibility.output  test_operators_float_int.output  test_operators_int.output  test_pack_spread.output  test_string_indexing.output  test_user_function.output
tests/test_sources/: test_assignment.txt  test_elif.txt  test_for.txt  test_if_else.txt  test_import.txt  test_import_absolute.txt  test_import_env.txt  test_import_relative.txt  test_list_comprehension.txt  test_list_indexing.txt  test_object_super.txt  test_object_visibility.txt  test_objects.txt  test_operators_float.txt  test_operators_float_int.txt  test_operators_float_int_2.txt  test_operators_int.txt  test_pack_spread.txt  test_string_indexing.txt  test_user_function.txt  test_while.txt
