[package]
name = "brainstorm"
version = "0.1.0"
edition = "2021"
description = "A language written in rust"
repository = "https://github.com/nKumar2015/brainstorm"
license = "MIT"
keywords = ["rustlang", "programming-language"]
categories = ["learning-tools", "programming-language"]
readme = "README.md"

[dependencies]
lalrpop-util = { version = "0.21.0",  features = ["lexer"]}

[build-dependencies]
lalrpop = "0.22.0" 
